<resources>
    <string name="app_name">Afrimoney</string>
    <string name="debug_number">090227946</string>
    <string name="debug_password">4827</string>
    <string name="logged_in">Logged In</string>
    <string name="error">Error</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="what_s_your_mobile_number">What\'s your Mobile Number?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_friend_mobile_number">Enter his/her Mobile Number</string>
    <string name="code_here">Code Here</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_otp_code_received_via_sms">Enter verification OTP code received via SMS</string>
    <string name="we_re_signing_you_up">We\'re Signing You Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="address_of_residence">Address of Residence</string>
    <string name="next">Next</string>
    <string name="image_is_required">Image is required</string>
    <string name="invalid_date_of_birth">Invalid date of birth</string>
    <string name="almost_done_we_are_confirming_your_identity">Almost Done, we are confirming your identity</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="id_type">ID Type</string>
    <string name="passport_type_photo">Passport type Photo</string>
    <string name="confirming">Confirm</string>
    <string name="front_image_is_required">Front image is required</string>
    <string name="back_image_is_required">Back image is required</string>
    <string name="passport_image_is_required">Passport image is required</string>
    <string name="get_the_best_security_protect_your_money">Get the best Security\nProtect your Money</string>
    <string name="create_pin">Create PIN</string>
    <string name="create_and_start">Create &amp; Start</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_enter_your_pin_code">Please Enter your PIN Code</string>
    <string name="pin_code">PIN Code</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="get_started">Get Started</string>
    <string name="invalid_pin">Invalid pin</string>
    <string name="home__all_caps">HOME</string>
    <string name="explore">Explore</string>
    <string name="explore__all_caps">EXPLORE</string>
    <string name="wallet">Wallet</string>
    <string name="wallet__all_caps">WALLET</string>
    <string name="locate_agent">Locate Agent</string>
    <string name="locate_agent__all_caps">LOCATE AGENT</string>
    <string name="account">Account</string>
    <string name="account__all_caps">ACCOUNT</string>
    <string name="messages">Messages</string>
    <string name="my_balance">My Balance</string>
    <string name="transactions">Transactions</string>
    <string name="transfer_moneyh">Transfer\nMoney</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="send_money">Send Money</string>
    <string name="send_moneyh">Send\nMoney</string>
    <string name="pending_transactionsh">Pending\nTransactions</string>
    <string name="pending_transactions">Pending Transactions</string>
    <string name="withdraw_moneyh">Withdraw\nMoney</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="withdraw_money_using_code">Withdraw Money Using\nAgent Code</string>
    <string name="withdraw_money_using_number">Withdraw Money Using\nAgent Number</string>
    <string name="withdraw_money_from_atm">Withdraw Money\nFrom ATM</string>
    <string name="africell_servicesh">Africell\nServices</string>
    <string name="africell_services">Africell Services</string>
    <string name="africredit">Africredit</string>
    <string name="pay_my_billsh">Pay\nBills</string>
    <string name="pay_my_bills">Pay Bills</string>
    <string name="pay_my__bills">Pay Bills</string>
    <string name="merchant_paymenth">Merchant\nPayment</string>
    <string name="merchant_payment">Merchant Payment</string>
    <string name="banking_servicesh">Banking\nServices</string>
    <string name="banking_services">Banking Services</string>
    <string name="please_fill_the_needed_info">Please fill the needed info</string>
    <string name="please_select_one">Please select one of the below:</string>
    <string name="receiver_mobile_number">Mobile number</string>
    <string name="amount_to_be_transferred">Amount</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="contact_permission_refused">Reading from contacts was refused</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="transfer__header">Transfer:</string>
    <string name="to_number__header">to Number:</string>
    <string name="total__header">Total:</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="fees_new">Fees: GMD %s</string>
    <string name="amount_currency">GMD %s</string>
    <string name="successful">Successful</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="passport">Passport</string>
    <string name="linked_banks">Linked Banks</string>
    <string name="available_banks">Available Banks</string>
    <string name="i_want_to_make">I want to Make</string>
    <string name="bank_to_wallet_transfer">Bank to Wallet transfer</string>
    <string name="bank_to_wallet_transfer_title">Transfer from your Bank to your Wallet</string>
    <string name="wallet_to_bank_transfer">Wallet to Bank transfer</string>
    <string name="balance_enquiry">Balance enquiry</string>
    <string name="banking_service_wallet_to_bank_header">You are about to Transfer from \nyour Wallet to your Bank</string>
    <string name="banking_service_bank_to_wallet_header">You are about to Transfer from \nyour Bank to your Wallet</string>
    <string name="transfer_from_your_bank_to_your_wallet">Transfer from your Bank to your Wallet</string>
    <string name="transfer_from_your_wallet_to_your_bank">Transfer from your Wallet to your Bank</string>
    <string name="view_your_balance_enquiry">View your Balance enquiry</string>
    <string name="select_your_bank_account">Select your Bank Account</string>
    <string name="your_name_on_the_card">Your Name on the Card</string>
    <string name="acc_number">ACC number</string>
    <string name="account_number">Account Number:</string>
    <string name="amount_to_pay">Amount to Pay:</string>
    <string name="transfer_amount__header">Transfer Amount:</string>
    <string name="from_your_bank_to_wallet">From your Bank To:</string>
    <string name="from_your_wallet_to__header">From your Wallet to:</string>
    <string name="confirm">Confirm</string>
    <string name="select_service">Select Service</string>
    <string name="africell_money_pin">Africell Money PIN</string>
    <string name="you_have_been_referred_by_a_friend">You have been referred by a friend</string>
    <string name="enter_invitation_code_optional">Enter Invitation Code (optional)</string>
    <string name="what_s_your_address">What\'s Your Address</string>
    <string name="get_location_from_map">Get Location From Map</string>
    <string name="providence">Providence</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="please_fill_the_address_of_residence">Please fill the address of residence</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pins_do_not_match">PINs do not match</string>
    <string name="last_5_transactions">Last Transactions</string>
    <string name="my_profile">My Profile</string>
    <string name="change_pin">Change PIN</string>
    <string name="my_contract_information">My Contract Information</string>
    <string name="your_identity">Your identity</string>
    <string name="old_pin">Old PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_new_pin">Confirm New PIN</string>
    <string name="your_pin_has_been_successfully_changed">Your PIN has been successfully changed</string>
    <string name="locate_us">Locate Us</string>
    <string name="our_agents">Our Agents</string>
    <string name="our_stores">Our Stores</string>
    <string name="call_us">Call Us</string>
    <string name="directions">Directions</string>
    <string name="about_afrimoney">About Afrimoney</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contact_support">Contact Support</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="app_settings">App Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cashout">CashOut</string>
    <string name="total__format">Total: </string>
    <string name="id">ID: </string>
    <string name="type">Type: </string>
    <string name="status">Status: </string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="receiver_name">Receiver Name:</string>
    <string name="enter_merchant_code">Merchant Code</string>
    <string name="reference_id">Reference Id:</string>
    <string name="enter_reference_id">Reference ID – optional</string>
    <string name="payment_to_merchant">Payment to Merchant: </string>
    <string name="merchant_code">Merchant code: </string>
    <string name="merchant_name">Merchant Name:</string>
    <string name="send">Send</string>
    <string name="unlimited_bundle">4G Unlimited Bundle</string>
    <string name="buy_data_bundleh">Buy\nData Bundle</string>
    <string name="buy_data_bundle">Buy Data Bundle</string>
    <string name="buy_airtimeh">Buy\nAirtime</string>
    <string name="buy_airtime">Buy airtime</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="amountHeader">Amount</string>
    <string name="amount">Amount:</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="date">Date:</string>
    <string name="initiated_by">Initiated By:</string>
    <string name="gambia">Gambia</string>
    <string name="airtime">Buy airtime</string>
    <string name="data">Data</string>
    <string name="special_offer">Ya! Special Offer</string>
    <string name="remix_offer">Ya! Remix Offer</string>
    <string name="enter_top_up_amount">Enter top app account</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="airtime_top_up_for">Airtime top up for:</string>
    <string name="africell_post_paid">Africell Postpaid</string>
    <string name="edsa">EDSA</string>
    <string name="dstv">DSTV</string>
    <string name="rising_academy">Rising Academy</string>
    <string name="mercury">Mercucry</string>
    <string name="fcc">FCC</string>
    <string name="you_are_about_to_renew">You are about to Renew Your\nDSTV Subscription</string>
    <string name="smart_card_number">Smart Card Number</string>
    <string name="subscription_type">Subscription Type</string>
    <string name="nb_of_months">Number Of Months</string>
    <string name="press">Press</string>
    <string name="africell_services_bottom_menu">AFRICELL SERVICES</string>
    <string name="customer_care">Customer Care</string>
    <string name="sms">SMS</string>
    <string name="location">Location</string>
    <string name="normal_wallet_">Nomal wallet: %s</string>
    <string name="bonus_wallet_">Bonus wallet: %s</string>
    <string name="remittance_wallet_">Remittance wallet: %s</string>
</resources>