<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/tab_home"
        android:title="@string/home__all_caps" />

    <item
        android:id="@+id/africellServicesFragment2"
        android:icon="@drawable/tab_services"
        android:title="@string/africell_services_bottom_menu" />

    <item
        android:enabled="false"
        android:title="QR CODE" />

    <item
        android:id="@+id/locateUsFragment"
        android:icon="@drawable/tab_locate"
        android:title="@string/locate_agent__all_caps" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/tab_account"
        android:title="@string/account__all_caps" />
</menu>